apps/shop/productcatalog/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-productcatalog-dev
spec:
  host: shop-productcatalog.shop-productcatalog.svc.cluster.local
  subsets:
  - name: shop-productcatalog-dev
    labels:
      app: shop-productcatalog
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-productcatalog-dev-d1a
    labels:
      app: shop-productcatalog
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
